rust/psibase_macros/psibase-macros-derive/tests/authorized/string_trust_level.stderr
error: do not use quotes around the trust level in `my_fn`
 --> tests/authorized/string_trust_level.rs:6:18
  |
6 |     #[authorized("Medium")]
  |                  ^^^^^^^^
