rust/psibase_macros/psibase-macros-derive/tests/authorized/string_trust_level.rs
use psibase_macros_derive::authorized;

struct MyPlugin;

impl MyPlugin {
    #[authorized("Medium")]
    fn my_fn() {}
}

fn main() {}
